rush02/ex00/file
number_handler.c:22:21: error: implicitly declaring library function 'strncmp' with type 'int (const char *, const char *, unsigned long)' [-Werror,-Wimplicit-function-declaration]
                if (strncmp(dict[i]->key, key, dict[i]->key_len) == 0)
                    ^
number_handler.c:22:21: note: include the header <string.h> or explicitly provide a declaration for 'strncmp'
number_handler.c:22:36: error: incomplete definition of type 'struct s_dict_index'
                if (strncmp(dict[i]->key, key, dict[i]->key_len) == 0)
                            ~~~~~~~^
number_handler.c:15:8: note: forward declaration of 'struct s_dict_index'
struct s_dict_index  *find_key(char *key, struct s_dict_index ** dict)
       ^
number_handler.c:22:55: error: incomplete definition of type 'struct s_dict_index'
                if (strncmp(dict[i]->key, key, dict[i]->key_len) == 0)
                                               ~~~~~~~^
number_handler.c:15:8: note: forward declaration of 'struct s_dict_index'
struct s_dict_index  *find_key(char *key, struct s_dict_index ** dict)
       ^
number_handler.c:29:45: error: variable has incomplete type 'struct s_dict_index'
void    tens(char *num, struct s_dict_index dict)
                                            ^
number_handler.c:15:8: note: forward declaration of 'struct s_dict_index'
struct s_dict_index  *find_key(char *key, struct s_dict_index ** dict)
       ^
number_handler.c:43:31: error: incomplete definition of type 'struct s_dict_index'
                write(1, value->value, value->value_len);
                         ~~~~~^
number_handler.c:15:8: note: forward declaration of 'struct s_dict_index'
struct s_dict_index  *find_key(char *key, struct s_dict_index ** dict)
       ^
number_handler.c:43:45: error: incomplete definition of type 'struct s_dict_index'
                write(1, value->value, value->value_len);
                                       ~~~~~^
number_handler.c:15:8: note: forward declaration of 'struct s_dict_index'
struct s_dict_index  *find_key(char *key, struct s_dict_index ** dict)
       ^
number_handler.c:52:6: error: use of undeclared identifier 'valu'; did you mean 'value'?
        if(!valu)
            ^~~~
            value
number_handler.c:33:30: note: 'value' declared here
        struct s_dict_index     *value;
                                 ^
number_handler.c:54:16: error: incomplete definition of type 'struct s_dict_index'
        write(1, value->value, value->value_len);
                 ~~~~~^
number_handler.c:15:8: note: forward declaration of 'struct s_dict_index'
struct s_dict_index  *find_key(char *key, struct s_dict_index ** dict)
       ^
number_handler.c:54:30: error: incomplete definition of type 'struct s_dict_index'
        write(1, value->value, value->value_len);
                               ~~~~~^
number_handler.c:15:8: note: forward declaration of 'struct s_dict_index'
struct s_dict_index  *find_key(char *key, struct s_dict_index ** dict)
       ^
number_handler.c:63:17: error: incomplete definition of type 'struct s_dict_index'
                write(1, value->value, value_>value_len);
                         ~~~~~^
number_handler.c:15:8: note: forward declaration of 'struct s_dict_index'
struct s_dict_index  *find_key(char *key, struct s_dict_index ** dict)
       ^
number_handler.c:63:26: error: use of undeclared identifier 'value_'
                write(1, value->value, value_>value_len);
                                       ^
number_handler.c:63:33: error: use of undeclared identifier 'value_len'
                write(1, value->value, value_>value_len);
                                              ^
number_handler.c:29:45: error: unused parameter 'dict' [-Werror,-Wunused-parameter]
void    tens(char *num, struct s_dict_index dict)
                                            ^
number_handler.c:79:29: error: unknown type name 'dict'
void    convert_num(char *num, dict *dict)
                               ^
number_handler.c:83:8: error: implicit declaration of function 'ft_strlen' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        len = ft_strlen(num);
              ^
number_handler.c:87:3: error: implicit declaration of function 'hundreds' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
                hundreds(num, dict);
                ^
number_handler.c:89:3: error: implicit declaration of function 'big_numbers' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
                big_numbers(num, ict);
                ^
number_handler.c:89:20: error: use of undeclared identifier 'ict'
                big_numbers(num, ict);
                                 ^
18 errors generated.

